--- a/反代网站配置例子.md
+++ b/反代网站配置例子.md
@@ -1,4 +1,25 @@
 ~~~
+
+    #屏蔽蜘蛛，防止降权，反代别人的网站。。。就随便了
+    if ($http_user_agent ~* (baiduspider|360spider|haosouspider|googlebot|soso|bing|sogou|yahoo|sohu-search|yodao|YoudaoBot|robozilla|msnbot|MJ12bot|NHN|Twiceler))
+    {
+        return  403;
+    }
+    #  镜像反代  microsoft.gointeract.io
+    location / {
+        sub_filter www.google.com xuia.ozx2flay.ml;
+        sub_filter_once off;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Referer https://www.google.com;
+        proxy_set_header Host www.google.com;
+        proxy_pass https://www.google.com;
+        proxy_set_header Accept-Encoding "";
+   }
+
+~~~
+
+~~~
     #屏蔽蜘蛛，防止降权，反代别人的网站。。。就随便了
     if ($http_user_agent ~* (baiduspider|360spider|haosouspider|googlebot|soso|bing|sogou|yahoo|sohu-search|yodao|YoudaoBot|robozilla|msnbot|MJ12bot|NHN|Twiceler))
     {
