--- a/反代网站配置例子.md
+++ b/反代网站配置例子.md
@@ -7,7 +7,7 @@
     }
     #  镜像反代  microsoft.gointeract.io
     location / {
-        sub_filter www.google.com xuia.ozx2flay.ml;
+        sub_filter www.google.com ggcn.cf;
         sub_filter_once off;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -27,7 +27,7 @@
     }
     #  镜像反代  microsoft.gointeract.io
     location / {
-        sub_filter microsoft.gointeract.io xuia.ozx2flay.ml; #网站域名，反代域名
+        sub_filter microsoft.gointeract.io ggcn.cf; #网站域名，反代域名
         sub_filter_once off; #进行替换
         #proxy_cache cache_one; #缓存区名称
         proxy_cache_valid  200 304 3h; #200 304状态缓存3小时
