--- a/反代网站配置例子.md
+++ b/反代网站配置例子.md
@@ -5,7 +5,7 @@
     {
         return  403;
     }
-    #  镜像反代  microsoft.gointeract.io
+    #  镜像反代  www.google.com
     location / {
         sub_filter www.google.com ggcn.cf;
         sub_filter_once off;
